[gd_scene load_steps=24 format=3 uid="uid://dotjiw8l07uqs"]

[ext_resource type="Script" path="res://Scripts/Characters/Player.gd" id="1_8qply"]
[ext_resource type="Texture2D" uid="uid://bbbk0bpwv7vdx" path="res://Textures/Characters/Player/PriestIdleAnimation-Sheet.png" id="2_ojrky"]
[ext_resource type="Texture2D" uid="uid://bpsdw5l81vnss" path="res://Textures/Characters/Player/PriestRunAnimation.png" id="3_nnl0r"]
[ext_resource type="PackedScene" uid="uid://djddk584srl2n" path="res://Scenes/Objects/Weapons/weapon_db_shotgun.tscn" id="7_ku17j"]
[ext_resource type="PackedScene" uid="uid://babkgsn6p2t0g" path="res://Scenes/Objects/Weapons/weapon_sword.tscn" id="8_1jth2"]
[ext_resource type="AudioStream" uid="uid://b0e0o5e52dsj0" path="res://Audio/Sound/Player/72ea3dd5d54f91f.mp3" id="8_uo374"]
[ext_resource type="Texture2D" uid="uid://g4xiaa272ubm" path="res://Textures/Characters/Player/Player_Dead.png" id="9_s0w08"]
[ext_resource type="AudioStream" uid="uid://wluislmllahj" path="res://Audio/Sound/Player/zvuk-boli-87.mp3" id="10_ruu4o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0205v"]
atlas = ExtResource("2_ojrky")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3upfe"]
atlas = ExtResource("2_ojrky")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3rjr"]
atlas = ExtResource("2_ojrky")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5d7h"]
atlas = ExtResource("2_ojrky")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlsrq"]
atlas = ExtResource("2_ojrky")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5aqs"]
atlas = ExtResource("2_ojrky")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1im07"]
atlas = ExtResource("3_nnl0r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pclm0"]
atlas = ExtResource("3_nnl0r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x342p"]
atlas = ExtResource("3_nnl0r")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ajd"]
atlas = ExtResource("3_nnl0r")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o3pi"]
atlas = ExtResource("3_nnl0r")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wskps"]
atlas = ExtResource("3_nnl0r")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3ec5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0205v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3upfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3rjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5d7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlsrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5aqs")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1im07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pclm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x342p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ajd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o3pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wskps")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r8lxt"]
radius = 4.0
height = 12.0

[sub_resource type="Curve" id="Curve_21g3h"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
slide_on_ceiling = false
script = ExtResource("1_8qply")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x3ec5")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_r8lxt")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
metadata/_edit_lock_ = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_uo374")

[node name="HurtSound0" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ruu4o")
volume_db = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 4)
texture = ExtResource("9_s0w08")

[node name="Weapon" type="Node2D" parent="."]

[node name="Weapon_DB_Shotgun" parent="Weapon" instance=ExtResource("7_ku17j")]

[node name="Weapon_Sword" parent="Weapon" instance=ExtResource("8_1jth2")]

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 6)
emitting = false
amount = 2
lifetime = 0.5
randomness = 1.0
gravity = Vector2(0, 0)
angular_velocity_min = -720.0
angular_velocity_max = 720.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_21g3h")
color = Color(0.792157, 0.792157, 0.792157, 1)
